; ModuleID = '/home/carl/AnghaBench/linux/security/extr_security.c_security_inode_mkdir.c'
source_filename = "/home/carl/AnghaBench/linux/security/extr_security.c_security_inode_mkdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.dentry = type { i32 }

@inode_mkdir = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @security_inode_mkdir(%struct.inode* %0, %struct.dentry* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.inode*, align 8
  %6 = alloca %struct.dentry*, align 8
  %7 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %5, align 8
  store %struct.dentry* %1, %struct.dentry** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.inode*, %struct.inode** %5, align 8
  %9 = call i32 @IS_PRIVATE(%struct.inode* %8)
  %10 = call i64 @unlikely(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %19

13:                                               ; preds = %3
  %14 = load i32, i32* @inode_mkdir, align 4
  %15 = load %struct.inode*, %struct.inode** %5, align 8
  %16 = load %struct.dentry*, %struct.dentry** %6, align 8
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @call_int_hook(i32 %14, i32 0, %struct.inode* %15, %struct.dentry* %16, i32 %17)
  store i32 %18, i32* %4, align 4
  br label %19

19:                                               ; preds = %13, %12
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @IS_PRIVATE(%struct.inode*) #1

declare dso_local i32 @call_int_hook(i32, i32, %struct.inode*, %struct.dentry*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
